--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: Install Go compiler
         uses: actions/setup-go@v2
         with:
-          go-version: 1.11
+          go-version: ^1.11
         id: go
 
       - name: Checkout fakemachine source
@@ -24,3 +24,6 @@ jobs:
           mkdir -p ${GOSRC}/github.com/go-debos
           ln -s $(pwd) ${GOSRC}/github.com/go-debos/fakemachine
           go get -v ./...
+
+      - name: WIP run unit-tests (host)
+        run: go test -v ./...
