download the test deps

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,4 +26,4 @@ jobs:
           go get -v ./...
 
       - name: WIP run unit-tests (host)
-        run: go test -v ./...
+        run: go get -v -t ./... && go test -v ./...
