download the test deps

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,8 @@ jobs:
         run: |
           mkdir -p ${GOSRC}/github.com/go-debos
           ln -s $(pwd) ${GOSRC}/github.com/go-debos/fakemachine
-          go get -v ./...
+          go get -v -t ./...
 
       - name: WIP run unit-tests (host)
-        run: go get -v -t ./... && go test -v ./...
+        # (dont forget to remove -t flag from go get)
+        run: go test -v ./...
